<resources>
    <string name="app_name">Insomnia</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_a">AActivity</string>
    <string name="title_activity_lll">lll</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_theme">Themes</string>
    <string name="drawer_item_themes">Themes</string>
    <string name="drawer_item_goals">Goals</string>
    <string name="drawer_item_tasks">Tasks</string>
    <string name="drawer_item_today">Today</string>
    <string name="save">Save</string>
    <string name="no_goals_hint">Quick! add a goal</string>
    <string name="some_goals_hint">add another goal</string>
    <string name="new_theme_prompt">add new theme</string>
    <string name="new_success_criteria">add a new metric</string>
    <string name="new_task">new task</string>
    <string name="success_criteria_commited_hint">amount</string>
    <string name="add_task">add a new task</string>
    <string name="select_a_success_criteria">Select a metric</string>
    <string name="click_to_set_date">click to set a date</string>
    <string name="action_delete">delete</string>
    <string name="action_edit">edit</string>
    <string name="action_save">save</string>
    <string name="theme_title_hint">theme title</string>
    <string name="theme_description_hint">description</string>
    <string name="anything_else">anything else?</string>
    <string name="max">Max: %1$d</string>
    <string name="task_title_empty">the task title is empty</string>
    <string name="goal_title_empty">add a title for your goal please</string>
    <string name="not_full">please fill in all values</string>
    <string name="no_due_date">no due date</string>
    <string name="no_title">please fill in a title</string>
    <string name="today">today</string>
    <string name="deletedItem">deleted item</string>
    <string name="undo">undo</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="metric">metric</string>
    <string name="task">task</string>
    <string name="hint_metric_amount">add completed time</string>
    <string name="weekdays">Week Days</string>
    <string name="weekends">weekends</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="startTime">Start</string>
    <string name="endTime">end</string>
    <string name="day">Day</string>
    <string name="active_hours">active hours</string>
    <string name="action_snooze">snooze</string>
    <string name="reminder_not_set">reminder not set</string>
    <string name="snooze_not_set">snooze not set</string>
    <string name="due_date_not_set">due date not set</string>
    <string name="drawer_item_focus">Focus</string>
    <string name="drawer_item_settings">Settings </string>
    <string name="notify_when_due">Notify when task is due</string>
    <string name="notify_when_snooze_ends">Notify when snooze has finished</string>
    <string name="getting_started">getting started</string>
    <string name="choose_dependent_task">Choose dependent task</string>
    <string name="period_text">every</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="week">Week</string>
    <string name="minute">Minute</string>
    <string name="recurrence_multi_display_string">Every %1$d %2$ss</string>
    <string name="recurrence_single_display_string">Every %1$s</string>
    <string name="Recurrence_hint">Recurrence</string>
    <string name="use_24_hour_clock">use 24 hour clock?</string>
    <string name="sunday_short">S</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">R</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="month">Month</string>

</resources>
