<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/day_checkbox"
        android:text="@string/day"
        android:paddingEnd="@dimen/smallSpace"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/day_start"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:hint="@string/startTime"
        android:paddingEnd="@dimen/smallSpace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/day_end"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:hint="@string/endTime"
        android:paddingEnd="@dimen/smallSpace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>