<LinearLayout
    style="@style/AppTheme.Fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/smallSpace"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        style="@style/AppTheme.Setting"
        android:id="@+id/fragment_settings_reminder_due"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/notify_when_due"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/fragment_settings_notify_due_switch"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        style="@style/AppTheme.Setting"
        android:id="@+id/fragment_settings_reminder_snooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:text="@string/notify_when_snooze_ends"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/fragment_settings_notify_snooze_switch"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        style="@style/AppTheme.Setting"
        android:id="@+id/fragment_settings_getting_started_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_settings_getting_started"
            android:layout_centerVertical="true"
            android:text="@string/getting_started"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


</LinearLayout>
