<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/AppTheme.Fragment">

    <LinearLayout
        android:id="@+id/fragment_theme_title_container"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_title_black_24dp"
            android:padding="@dimen/smallSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/fragment_theme_edit_title"
            style="@style/AppTheme.EditText.NoMargin"
            android:layout_gravity="start|center_vertical"
            android:hint="@string/theme_title_hint"
            android:imeOptions="actionDone"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragment_theme_description_container"
        android:orientation="horizontal"
        android:background="@color/lightGrey"
        android:layout_below="@id/fragment_theme_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_short_text_black_24dp"
            android:padding="@dimen/smallSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/fragment_theme_edit_description"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical|start"
            android:hint="@string/theme_description_hint"/>
    </LinearLayout>


    <TextView
        android:layout_below="@id/fragment_theme_description_container"
        android:padding="@dimen/smallSpace"
        android:background="?selectableItemBackground"
        android:id="@+id/fragment_theme_edit_active_hours"
        android:text="@string/active_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/fragment_theme_edit_new_goal_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_theme_edit_active_hours">

        <ImageView
            android:src="@drawable/goal_icon"
            android:padding="@dimen/smallSpace"
            android:layout_gravity="center_vertical"
            android:layout_width="36dp"
            android:scaleType="fitCenter"
            android:layout_height="36dp"/>

        <EditText
            android:id="@+id/fragment_theme_edit_new_goal_text"
            style="@style/AppTheme.addItem"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:inputType="text"
            android:hint="@string/no_goals_hint"
            android:text=""/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_theme_done_container"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/fragment_theme_done_button"
            android:src="@drawable/ic_done_white_36dp"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_theme_edit_goals"
        android:layout_below="@id/fragment_theme_edit_new_goal_container"
        android:layout_above="@id/fragment_theme_done_container"
        android:animateLayoutChanges="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</RelativeLayout>